--- a/templates/dj10n/translators.html
+++ b/templates/dj10n/translators.html
@@ -54,7 +54,7 @@ $mail="{{ mail|safe }}";
     <td class='bookingDate'>{{ po.startdate|default_if_none:"-"}}</td>
     <td>{{ po.untranslated }}</td>
     <td>{{ po.fuzzy }}</td>
-    <td class="pology"><a href='../pology-errors.php?po={{ po.name }}.po&amp;package={{ module.name }}&amp;branch={{ branch.path }}&amp;mode=gui'>{{ po.error }}
+    <td class="pology"><a href='../pology-errors.php?po={{ po.name }}.po&amp;package={{ module.name }}&amp;branch={{ branch.path }}&amp;mode={{ type }}'>{{ po.error }}
     {% ifequal po.error 0 %}<img src='../img/status/ok.png' alt='Aucune erreur' />
     {% else %}<img src='../img/status/warning.png' alt='Erreurs Pology' /> {% endifequal %}</a></td>
     <td>{{ po.translated }}</td>
@@ -114,7 +114,7 @@ $mail="{{ mail|safe }}";
                    </ul>
                    </div>
                    
-        <div id="lastUpdate">Dernière mise à jour : {{ now|date:"l j F Y, G:i:s" }}</div><?php
+        <div id="lastUpdate">Dernière mise à jour : {% now "l j F Y, G:i:s" %}</div><?php
             include "footer.inc";
             ?>
             
