--- a/templates/dj10n/stats.html
+++ b/templates/dj10n/stats.html
@@ -1,34 +1,6 @@
-<?php
-// Auteur:   {{ name }}
-$page_title = "Traduction en français de KDE";
-$site_root = "./";
-include_once ("functions.inc");
-include "header.inc";
-$site_title = "KDE en français";
-$site_external = true;
-$showedit = false;
-$name="{{ name }}";
-$mail="{{ mail|safe }}";
-?>
+{% extends "dj10n/base.html" %}
 
-<div id="sommaire"><h3>Sommaire</h3>
-       <ul><li>
-       <a href="pofiles.php">
-               <img src="../img/package.png" alt="Affectation" />
-               Fichiers de traduction classés par module
-               </a>
-       </li><li>
-               <a href="translators.php">
-               <img src="../img/affectation.png" alt="Affectation" />
-               Fichiers de traduction classés par traducteur
-               </a>
-       </li><li>
-               <a href="stats.php">
-               <img src="../img/stats.png" alt="Affectation" />
-               Statistiques de traduction
-               </a>
-       </li></ul></div><hr />
-
+{% block content %}
 <h3>Fichiers traduits par branche</h3>
     <table class="poFiles">
         <thead><tr>
@@ -87,7 +59,6 @@ $mail="{{ mail|safe }}";
 	            </tr>
             {% endfor %}
          </tbody></table><hr />
-
-                   
-<div id="lastUpdate">Dernière mise à jour : {% now "l j F Y, G:i:s" %}</div>
-<?php include "footer.inc"; ?>
+{% endblock content %}
+{% block legend %}
+{% endblock legend %}
