Add link to CSV page at the bottom of translator page

--- a/templates/dj10n/translators.html
+++ b/templates/dj10n/translators.html
@@ -68,5 +68,5 @@
     <td>{{ translator_values.translated }}</td>
     </tr></tfoot></table><hr />
 {% endfor %}
-
+<a href='translators.csv'>Export CSV</a>
 {% endblock content %}
