Fix pology mode type for translator page

--- a/templates/dj10n/translators.html
+++ b/templates/dj10n/translators.html
@@ -53,7 +53,7 @@
         <td class='bookingDate'>{{ po.startdate|date:"j b y"}}</td>
         <td>{{ po.untranslated }}</td>
         <td>{{ po.fuzzy }}</td>
-        <td class="pology"><a href='../pology-errors.php?po={{ po.name }}.po&amp;package={{ module.name }}&amp;branch={{ branch.path }}&amp;mode=gui'>{{ po.error }}
+        <td class="pology"><a href='../pology-errors.php?po={{ po.name }}.po&amp;package={{ module.name }}&amp;branch={{ branch.path }}&amp;mode={{ type }}'>{{ po.error }}
         {% ifequal po.error 0 %}<img src='../img/status/ok.png' alt='Aucune erreur' />
         {% else %}<img src='../img/status/warning.png' alt='Erreurs Pology' /> {% endifequal %}</a></td>
         <td>{{ po.translated }}</td>
