--- a/templates/dj10n/pofiles.html
+++ b/templates/dj10n/pofiles.html
@@ -1,8 +1,9 @@
 {% extends "dj10n/base.html" %}
+{% load i18n %}
 
 {% block content %}
 {% for branch, modules in branches.items %}
-    <h3>Branche {{ branch.name }}</h3>
+    <h3>{% with branch.name as branchname %}{% blocktrans %}{{ branchname }} branch{% endblocktrans %}{% endwith %}</h3>
     <table class="packages"><tr>
     {% for module in modules|dictsort:"name" %}
         <td><a href='#{{ module.name }}'>{{ module.name }}</a></td>
@@ -17,20 +18,20 @@
         <h3 id='{{ module.name }}'>{{ module.name }} (<span class='{{ module.branch.name }}'>{{ module.branch.name }}</span>)</h3>
         <table class="poFiles">
         <thead><tr>
-            <th class="nom">Nom</th>
-            <th class="affectation">Affectation</th>
-            <th class="bookingDate">Date d'affectation</th>
-            <th class="traduire" title="Nombre de messages non traduits."><a href='#legend'>À traduire</a></th>
-            <th class="actualiser" title="Nombre de messages dont le message origine ou le contexte a changé."><a href='#legend'>À mettre à jour</a></th>
-            <th class="pology" title="Nombre de messages comportants des erreurs selon l'outil « Pology »."><a href='#legend'>À vérifier</a></th>
-            <th class="effectuer" title="Nombre de messages déjà traduits."><a href='#legend'>Traduits</a></th>
+            <th class="nom">{% trans "Name" %}</th>
+            <th class="affectation">{% trans "Booked by" %}</th>
+            <th class="bookingDate">{% trans "Booking date" %}</th>
+            <th class="traduire" title="Nombre de messages non traduits."><a href='#legend'>{% trans "To be translated" %}</a></th>
+            <th class="actualiser" title="Nombre de messages dont le message origine ou le contexte a changé."><a href='#legend'>{% trans "To be updated" %}</a></th>
+            <th class="pology" title="Nombre de messages comportants des erreurs selon l'outil « Pology »."><a href='#legend'>{% trans "To be checked" %}</a></th>
+            <th class="effectuer" title="Nombre de messages déjà traduits."><a href='#legend'>{% trans "Translated" %}</a></th>
          </tr></thead>
          <tbody>
          {% for po in module.pofile_set.all|dictsort:"name" %}
             <tr class="{% cycle 'odd' 'even' %} {{ po.getCss }}">
             <th><a href='{{ po.webPath }}'>{{ po.name }}</a></th>
             {% if po.translator %}<td class='translator'><a href='mailto:{{ po.translator.email }}'>{{ po.translator.firstname }} {{ po.translator.lastname }}</a></td>
-            {% else %}<td class='translator'><a href='mailto:{{ mail|safe }}'><em>Fichier à réserver</em></a></td>{% endif %}
+            {% else %}<td class='translator'><a href='mailto:{{ mail|safe }}'><em>{% trans "Available file" %}</em></a></td>{% endif %}
             <td class='bookingDate'>{{ po.startdate|date:"j b y"}}</td>
             <td>{{ po.untranslated }}</td>
             <td>{{ po.fuzzy }}</td>
@@ -41,7 +42,7 @@
             </tr>            
          {% endfor %}
          </tbody></table><hr />         
-     {% endfor %}    
+     {% endfor %}
 {% endfor %}
 
 {% endblock content %}
